--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="player" style="position: absolute; top: -9999px; left: -9999px;"></div>
+    <script src="http://www.youtube.com/player_api"></script>
   </body>
 </html>
